getting group members
