# src/router/user.js
@@ -43,6 +43,7 @@ router.get("/group-added/:id", userController.getGroupAddedUser);
 router.get("/group-open/:id", userController.getGroupDetails);
 router.post("/group/:id/add-members", userController.addMembers);
 router.post("/group/:id/remove-members", userController.removeMembers);
+router.get("/group/:id/members", userController.viewMembers);
 router.put("/group/:id", userController.editGroup);
 router.delete("/group/:id", userController.deleteGroup);
 
